--- a/config/scaffolding/SIQA_TESTGIT_1108Project.yml
+++ b/config/scaffolding/SIQA_TESTGIT_1108Project.yml
@@ -7,3 +7,20 @@ packages:
   gitUrl: https://github.com/rimabarman
   gitUsername: rimabarman
   gitBranch: main
+services:
+- serviceName: project.siqa_testgit_1108.integrations:deepclonetest
+  packages:
+  - name: SIQA_TESTGIT_1108Project
+    version: "1.0"
+- serviceName: pub.string:stringToBytes
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
+- serviceName: pub.utils:deepClone
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
+- serviceName: pub.string:bytesToString
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
