--- a/config/scaffolding/SIQA_TESTGIT_1108Project.yml
+++ b/config/scaffolding/SIQA_TESTGIT_1108Project.yml
@@ -8,6 +8,14 @@ packages:
   gitUsername: rimabarman
   gitBranch: main
 services:
+- serviceName: project.siqa_testgit_1108.integrations:AlertsCRTandERT
+  packages:
+  - name: SIQA_TESTGIT_1108Project
+    version: "1.0"
+- serviceName: pub.alert:emit
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
 - serviceName: project.siqa_testgit_1108.integrations:deepclonetest
   packages:
   - name: SIQA_TESTGIT_1108Project
